# humanebench-eval

./: .env.example  README.md  docker-compose.yml  nginx.conf
chat/: .env.example  .gitignore  Dockerfile  README.md  compass_artifact_wf-24878794-4d6e-4830-b327-bf5910c9e053_text_markdown.md  package-lock.json  package.json
chat/app/: globals.css  layout.tsx  page.tsx
chat/app/api/chat-eval/: route.ts
chat/components/: CategoryExplain.tsx  ChatWindow.tsx  DiagnosticsPanel.tsx
chat/components/charts/: CategoryBarChart.tsx  TrendChart.tsx
chat/lib/: evalEngine.ts  geminiAdapter.ts  mockData.ts  types.ts
dashboard/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml
dashboard/dashboard/: index.html
dashboard/humanebench/: __init__.py  api.py  db.py  evaluator.py  interceptor.py  models.py  rubric.py
dashboard/rubrics/: rubric_v3.md
dashboard/scripts/: run_eval.py  seed_demo.py  seed_trends.py
dashboard/tests/: test_evaluator.py
